--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">接吻的艺术</string>
     
-    <string name="action_settings">设置</string>
     <string name="action_bgmusic">我心依旧</string>
+    <string name="action_about">关于</string>
     
     <string name="title_section1">好处</string>
     <string name="title_section2">指导</string>
