--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">The Art of Kissing</string>
+    <string name="app_name">接吻的艺术</string>
     
     <string name="action_bgmusic">我心依旧</string>
-    <string name="action_about">About</string>
+    <string name="action_about">关于</string>
     
     <string name="title_section1">好处</string>
-    <string name="title_section2">How to</string>
+    <string name="title_section2">指导</string>
     <string name="title_section3">文化</string>
     
 </resources>
