--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="action_bgmusic">我心依旧</string>
     <string name="action_about">About</string>
     
-    <string name="title_section1">好处</string>
+    <string name="title_section1">Good</string>
     <string name="title_section2">How to</string>
-    <string name="title_section3">文化</string>
+    <string name="title_section3">Wiki</string>
     
 </resources>
