翻译成英文版本，增加关于对话框

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">The Art of Kissing</string>
     
     <string name="action_overflow">More</string>
+    <string name="action_appwall">App Wall</string>
     <string name="action_bgmusic">My Heart Will Go On</string>
     <string name="action_about">About</string>
     
