--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">接吻的艺术</string>
     
     <string name="action_overflow">更多</string>
+    <string name="action_appwall">应用推荐</string>
     <string name="action_bgmusic">我心依旧</string>
     <string name="action_about">关于</string>
     
