删除了背景音乐和更加了分享功能

--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">接吻的艺术</string>
     
+    <string name="action_share">分享</string>
     <string name="action_overflow">更多</string>
     <string name="action_appwall">应用推荐</string>
     <string name="action_bgmusic">我心依旧</string>
