--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">The Art of Kissing</string>
     
+    <string name="action_share">Share</string>
     <string name="action_overflow">More</string>
     <string name="action_appwall">App Wall</string>
     <string name="action_bgmusic">My Heart Will Go On</string>
